--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,11 +2,21 @@ workflows:
   build-android:
     name: Build Android APK
     environment:
-      flutter: 3.16.5  # Use specific Flutter version with Dart 3.16.5
+      flutter: 3.19.2  # Use the updated Flutter version compatible with google_fonts >=6.2.1
     scripts:
+      # Step 1: Install Dependencies
       - name: Install dependencies
-        script: flutter pub get
+        script: |
+          # Upgrade Flutter if needed
+          flutter upgrade || true  # Skip if already on latest version
+          
+          # Ensure dependencies are fetched and SDKs are resolved
+          flutter pub get
+          
+      # Step 2: Build APK
       - name: Build APK
         script: flutter build apk --release
+        
     artifacts:
+      # Output artifact for the build APK
       - build/app/outputs/flutter-apk/app-release.apk
